--- a/templates/analyses/images/new_image.html
+++ b/templates/analyses/images/new_image.html
@@ -31,7 +31,7 @@
                 <div class="input-append">
                     <input id="id_image" name="image" class="upload-image" type="file" placeholder="Select your image..">
                     <button id="btn_submit" class="btn btn-large btn-success" type="submit">
-                        <img class="wait hide" src="/static/img/fancybox/loading.gif"> Add
+                        Add
                     </button>
                     <a href="{% url "analyses.views.show_case" case.id "list" %}" class="btn btn-large"> Back </a>
                 </div>
