--- a/templates/analyses/cases/_tbl_case.html
+++ b/templates/analyses/cases/_tbl_case.html
@@ -12,7 +12,8 @@
         </li>
     </ul>
     <a href="{% url "analyses.views.edit_case" case.id %}" class="btn tool" title="Edit case"><i class="icon-edit"></i></a>
-    <a class="btn btn-warning tool btn-close" id="{% url "analyses.views.close_case" case.id %}" title="Close case" href="#close" role="button" data-toggle="modal"> <i class="icon-remove"></i> </a>
+    <a class="btn btn-warning tool btn-close-case" id="{% url "analyses.views.close_case" case.id %}" title="Close case" href="#close" role="button" data-toggle="modal"> <i class="icon-remove"></i> </a>
+    <a class="btn btn-danger tool btn-delete-case" id="{% url "analyses.views.delete_case" case.id %}" title="Delete case" href="#delete" role="button" data-toggle="modal"> <i class="icon-trash"></i> </a>
 </div>
 <div class="pull-right">
     <a class="btn" onClick="window.location.reload();return false;"><i class="icon-refresh"></i></a><span class="notice-new" id="notice"></span>
