--- a/templates/layout/_modalActionCase.html
+++ b/templates/layout/_modalActionCase.html
@@ -11,7 +11,7 @@
         </p>
     </div>
     <div class="modal-footer">
-        <a class="btn btn-warning" id="id">
+        <a class="btn btn-warning" id="id-close">
             Close
         </a>
         <button class="btn" data-dismiss="modal" aria-hidden="true">
