--- a/templates/layout/_indexCase.html
+++ b/templates/layout/_indexCase.html
@@ -24,6 +24,7 @@
                                     {% if case.state == "C" %}
                                         <a class="btn tool" title="No actions available" disabled="disabled"> <i class="icon-edit"></i> </a>
                                         <a class="btn btn-warning tool" disabled="disabled" title="Case already closed"> <i class="icon-remove"></i> </a>
+                                        <a class="btn btn-danger tool btn-delete-case" id="{% url "analyses.views.delete_case" case.id %}" title="Delete case" href="#delete" role="button" data-toggle="modal"> <i class="icon-trash"></i> </a>
                                     {% else %}
                                         <a class="btn tool" title="Edit case" href="{% url "analyses.views.edit_case" case.id %}"> <i class="icon-edit"></i> </a>
                                         <a class="btn btn-warning tool btn-close-case" id="{% url "analyses.views.close_case" case.id %}" title="Close case" href="#close" role="button" data-toggle="modal"> <i class="icon-remove"></i> </a>
