--- a/templates/analyses/report/_signature.html
+++ b/templates/analyses/report/_signature.html
@@ -27,7 +27,7 @@
         <div class="tab-content">
             <div class="tab-pane fade in active" id="system-signature">
                 <div class="row-fluid">
-                    <div class="accordion" id="sign-accordion" style="background-color: #FFFFFF;">
+                    <div class="accordion" id="sign-accordion">
                         {% for sign in anal.signatures %}
                             {% include "analyses/report/_signatures_table.html" %}
                         {% endfor %}
@@ -36,7 +36,7 @@
             </div>
             <div class="tab-pane fade" id="high-signature">
                 <div class="row-fluid">
-                    <div class="accordion" id="sign3-accordion" style="background-color: #FFFFFF;">
+                    <div class="accordion" id="sign3-accordion">
                         {% for sign in anal.signatures %}
                             {% if sign.severity == 3 %}
                                 {% include "analyses/report/_signatures_table.html" with segment=3 %}
@@ -47,7 +47,7 @@
             </div>
             <div class="tab-pane fade" id="medium-signature">
                 <div class="row-fluid">
-                    <div class="accordion" id="sign2-accordion" style="background-color: #FFFFFF;">
+                    <div class="accordion" id="sign2-accordion">
                         {% for sign in anal.signatures %}
                             {% if sign.severity == 2 %}
                                 {% include "analyses/report/_signatures_table.html" with segment=2 %}
@@ -58,7 +58,7 @@
             </div>
             <div class="tab-pane fade" id="low-signature">
                 <div class="row-fluid">
-                    <div class="accordion" id="sign1-accordion" style="background-color: #FFFFFF;">
+                    <div class="accordion" id="sign1-accordion">
                         {% for sign in anal.signatures %}
                             {% if sign.severity == 1 %}
                                 {% include "analyses/report/_signatures_table.html" with segment=1 %}
