--- a/static/css/style.css
+++ b/static/css/style.css
@@ -438,3 +438,23 @@ margin-left:-1px;
     -moz-border-bottom-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+
+#img_container_map {
+    position:relative;
+    display:inline-block;
+}
+    .badge-map-low {
+    position:absolute;
+    bottom:1px;
+    right:4px;
+}
+    .badge-map-warning {
+    position:absolute;
+    bottom:1px;
+    right:40px;
+}
+    .badge-map-error {
+    position:absolute;
+    bottom:1px;
+    right:76px;
+}
