--- a/templates/analyses/images/new_url.html
+++ b/templates/analyses/images/new_url.html
@@ -19,7 +19,7 @@
                     <a href="{% url "analyses.views.show_case" case.id "list" %}"><i class="icon-book"> </i> {{ case.name }}</a><span class="divider">&rsaquo;</span>
                 </li>
                 <li class="active">
-                    New image to URL
+                    New image URL
                 </li>
             </ul>
         </div>
