--- a/templates/analyses/report/_static.html
+++ b/templates/analyses/report/_static.html
@@ -38,6 +38,12 @@
                                 <td>{{ anal.file_name }}</td>
                             </tr>
                             {% endif %}
+                            {% if anal.file_size|filesizeformat %}
+                            <tr>
+                                <td><b>Size</b></td>
+                                <td>{{ anal.file_size|filesizeformat }}</td>
+                            </tr>
+                            {% endif %}
                             {% if anal.metadata.dimensions %}
                             <tr>
                                 <td><b>Dimensions</b></td>
